--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/weecover"
   },
-  "version": "0.0.24",
+  "version": "0.0.25",
   "description": "A simple template for a custom React component library",
   "scripts": {
     "rollup": "rollup -c rollup.config.mjs"
@@ -24,9 +24,9 @@
     "@rollup/plugin-terser": "^0.4.1",
     "@rollup/plugin-typescript": "^11.1.0",
     "@types/react": "^18.2.6",
+    "core-js": "^3.30.2",
     "node-sass": "^8.0.0",
     "postcss": "^8.4.23",
-    "react": "^18.2.0",
     "rollup": "^3.21.6",
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-dts": "^5.3.0",
@@ -38,6 +38,9 @@
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0"
   },
   "main": "dist/cjs/index",
   "typings": "dist/cjs/index",
