--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,8 @@
         "corejs": "3.30.0"
       }
     ],
-    "@babel/preset-react"
+    "@babel/preset-react",
+    "@babel/preset-typescript"
   ],
   "plugins": [
     "babel-plugin-macros",
