--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/weecover"
   },
-  "version": "0.0.25",
+  "version": "0.0.26",
   "description": "A simple template for a custom React component library",
   "scripts": {
-    "rollup": "rollup -c rollup.config.mjs"
+    "rollup": "rollup -c rollup.config.mjs",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "author": "Weecover",
   "license": "ISC",
@@ -16,6 +18,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.5",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.1.0",
     "@rollup/plugin-image": "^3.0.2",
@@ -23,10 +26,23 @@
     "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-terser": "^0.4.1",
     "@rollup/plugin-typescript": "^11.1.0",
+    "@storybook/addon-essentials": "^7.0.11",
+    "@storybook/addon-interactions": "^7.0.11",
+    "@storybook/addon-links": "^7.0.11",
+    "@storybook/blocks": "^7.0.11",
+    "@storybook/react": "^7.0.11",
+    "@storybook/react-webpack5": "^7.0.11",
+    "@storybook/testing-library": "0.0.14-next.2",
     "@types/react": "^18.2.6",
     "core-js": "^3.30.2",
+    "css-loader": "^6.7.3",
+    "mini-css-extract-plugin": "^2.7.5",
     "node-sass": "^8.0.0",
     "postcss": "^8.4.23",
+    "postcss-loader": "^7.3.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^3.21.6",
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-dts": "^5.3.0",
@@ -36,6 +52,8 @@
     "rollup-plugin-size-snapshot": "^0.12.0",
     "rollup-plugin-styles": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
+    "storybook": "^7.0.10",
+    "style-loader": "^3.3.2",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4"
   },
@@ -49,5 +67,7 @@
     "dist"
   ],
   "types": "dist/index.js",
-  "dependencies": {}
+  "dependencies": {
+    "webpack": "^5.82.1"
+  }
 }
